--- a/templates/home.html
+++ b/templates/home.html
@@ -93,16 +93,16 @@ body {
 	width: 100%;
 	height:100%;
 	font-family: 'Open Sans', sans-serif;
-	background: #092756;
+	background:#670d10;
 	color: #fff;
 	font-size: 18px;
 	text-align:center;
 	letter-spacing:1.2px;
-	background: -moz-radial-gradient(0% 100%, ellipse cover, #092756 10%,#092756 40%),-moz-linear-gradient(top,  rgba(57,173,219,.15) 0%, rgba(42,60,87,.14) 100%), -moz-linear-gradient(-45deg,  #092756 0%, #092756 100%);
-	background: -webkit-radial-gradient(0% 100%, ellipse cover, #092756 10%,#092756 40%), -webkit-linear-gradient(top,  rgba(57,173,219,.15) 0%,#092756 100%), -webkit-linear-gradient(-45deg,  #092756 0%,#092756 100%);
-	background: -o-radial-gradient(0% 100%, ellipse cover, #092756 10%,#092756 40%), -o-linear-gradient(top,  rgba(57,173,219,.15) 0%,#092756 100%), -o-linear-gradient(-45deg,  #092756 0%,#092756 100%);
-	background: -ms-radial-gradient(0% 100%, ellipse cover, #092756 10%,#092756 40%), -ms-linear-gradient(top,  rgba(57,173,219,.15) 0%,rgba(42,60,87,.14) 100%), -ms-linear-gradient(-45deg,  #092756 0%,#092756 100%);
-	background: -webkit-radial-gradient(0% 100%, ellipse cover,#092756 10%,#092756 40%), linear-gradient(to bottom,  rgba(57,173,219,.15) 0%,rgba(42,60,87,.14) 100%), linear-gradient(135deg,  #092756 0%,#092756 100%);
+	background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),-moz-linear-gradient(top,  rgba(57,173,219,.15) 0%, rgba(42,60,87,.14) 100%), -moz-linear-gradient(-45deg,  #670d10 0%, #092756 100%);
+	background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -webkit-linear-gradient(top,  rgba(57,173,219,.15) 0%,rgba(42,60,87,.14) 100%), -webkit-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+	background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -o-linear-gradient(top,  rgba(57,173,219,.15) 0%,rgba(42,60,87,.14) 100%), -o-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+	background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -ms-linear-gradient(top,  rgba(57,173,219,.15) 0%,rgba(42,60,87,.14) 100%), -ms-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+	background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), linear-gradient(to bottom,  rgba(57,173,219,.15) 0%,rgba(42,60,87,.14) 100%), linear-gradient(135deg,  #670d10 0%,#092756 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );
 
 }
@@ -163,11 +163,11 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
     <span class="Hazardous"><b>Hazardous(301-500 PM10)</b> </span> 
    <h3>Let's Predict Air Quality Index </h3>
     <form action="{{ url_for('predict')}}"method="post">
-      <input type="text" name="interview_score3" placeholder="Maximum Wind Speed In (M/S)" required="required" /><br>
-    	<input type="text" name="interview_score6" placeholder="Average Wind Speed In (M/S)" required="required" /><br>
-      <input type="text" name="experience" placeholder="Maximum Temperature In (°C)" required="required" /><br>
-      <input type="text" name="test_score" placeholder="Minimum Temperature In (°C)" required="required" /><br>
-      <input type="text" name="interview_score5" placeholder="Average Temperature In (°C)" required="required" /><br>
+      <input type="number" name="interview_score3" placeholder="Maximum Wind Speed In (m/h)" required="required" min="1" max="125"/><br>
+    	<input type="number" name="interview_score6" placeholder="Average Wind Speed In (m/h)" required="required" min="1" max="125"/><br>
+      <input type="number" name="experience" placeholder="Maximum Temperature In (°C)" required="required" min="18" max="45"/><br>
+      <input type="number" name="test_score" placeholder="Minimum Temperature In (°C)" required="required" min="18" max="45"/><br>
+      <input type="number" name="interview_score5" placeholder="Average Temperature In (°C)" required="required" min="18" max="45"/><br>
       <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
     </form>
   <h3> {{prediction_text}} </h3>
